complete journalEntry and added swagger api docs
